# fifty-agent-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_sdk/: __init__.py  errors.py  loop.py  prompts.py  runner.py  safety.py  streaming.py
src/agent_sdk/audit/: __init__.py  console.py  protocol.py  sql.py
src/agent_sdk/llm/: __init__.py  openai_compat.py  protocol.py  types.py
src/agent_sdk/mcp/: __init__.py  client.py  transport.py
src/agent_sdk/observability/: __init__.py  hooks.py
src/agent_sdk/parser/: __init__.py  base.py  json_mode.py  native_tools.py  prose_mode.py
src/agent_sdk/state/: __init__.py  memory.py  protocol.py  redis.py  sql.py
src/agent_sdk/tools/: __init__.py  inproc_provider.py  mcp_provider.py  protocol.py  registry.py
src/fifty_agent_sdk/: __init__.py  errors.py  loop.py  runner.py  safety.py  streaming.py
src/fifty_agent_sdk/audit/: __init__.py  console.py  protocol.py  sql.py
src/fifty_agent_sdk/llm/: __init__.py  openai_compat.py  protocol.py  types.py
src/fifty_agent_sdk/mcp/: __init__.py  client.py  transport.py
src/fifty_agent_sdk/observability/: __init__.py  hooks.py
src/fifty_agent_sdk/parser/: __init__.py  base.py  json_mode.py  native_tools.py  prose_mode.py
src/fifty_agent_sdk/state/: __init__.py  memory.py  protocol.py  redis.py  sql.py
src/fifty_agent_sdk/tools/: __init__.py  inproc_provider.py  mcp_provider.py  protocol.py  registry.py
tests/: __init__.py  test_e2e_example.py  test_errors.py  test_prompts.py  test_version.py
tests/audit/: test_console.py  test_protocol.py  test_sql.py  test_sql_import_guard.py
tests/llm/: __init__.py  test_openai_compat.py  test_types.py
tests/loop/: __init__.py  conftest.py  test_loop.py  test_loop_hooks.py  test_safety.py  test_streaming.py
tests/mcp/: __init__.py  _fastmcp_server.py  conftest.py  test_client.py  test_client_compat.py  test_interface_stability.py
tests/observability/: __init__.py  test_hooks.py
tests/parser/: __init__.py  test_base.py  test_json_mode.py  test_native_tools.py  test_prose_mode.py
tests/runner/: conftest.py  test_runner.py  test_runner_audit.py  test_runner_branching.py  test_runner_hooks.py
tests/state/: test_branching_differential.py  test_memory.py  test_memory_branching.py  test_protocol.py  test_redis.py  test_redis_branching.py  test_redis_import_guard.py  test_redis_integration.py  test_sql.py  test_sql_branching.py  test_sql_import_guard.py  test_sql_postgres.py
tests/tools/: __init__.py  conftest.py  test_inproc_provider.py  test_mcp_provider.py  test_protocol.py  test_registry.py
